--- a/2ndEdition/luz.frias/2_Actividades/res/layout/main.xml
+++ b/2ndEdition/luz.frias/2_Actividades/res/layout/main.xml
@@ -23,5 +23,17 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/boton3" />
+    
+    <Button
+        android:id="@+id/button4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/boton4" />
+    
+    <Button
+        android:id="@+id/button5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/boton5" />
 
 </LinearLayout>
