--- a/2ndEdition/luz.frias/2_Actividades/res/menu/main.xml
+++ b/2ndEdition/luz.frias/2_Actividades/res/menu/main.xml
@@ -1,8 +1,13 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <item
-        android:id="@+id/menu_settings"
-        android:orderInCategory="100"
-        android:title="@string/menu_settings"/>
+        android:id="@+id/menu1"
+        android:icon="@drawable/ic_launcher"
+        android:title="@string/menu1"/>
+    
+    <item
+        android:id="@+id/menu2"
+        android:icon="@drawable/ic_launcher"
+        android:title="@string/menu2"/>
 
 </menu>
