--- a/2ndEdition/antonio.diazarroyo/02 - activities/res/menu/activity_main.xml
+++ b/2ndEdition/antonio.diazarroyo/02 - activities/res/menu/activity_main.xml
@@ -1,9 +1,14 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <item
-        android:id="@+id/menu_settings"
+        android:id="@+id/menu1"
         android:orderInCategory="100"
         android:showAsAction="never"
-        android:title="@string/menu_settings"/>
+        android:title="@string/button_activity_02"/>
+    <item
+        android:id="@+id/menu2"
+        android:orderInCategory="100"
+        android:showAsAction="never"
+        android:title="@string/button_activity_03"/>
 
 </menu>
