--- a/2ndEdition/jose.fernandez.rosa/4-Mapas/res/layout/activity_main.xml
+++ b/2ndEdition/jose.fernandez.rosa/4-Mapas/res/layout/activity_main.xml
@@ -4,11 +4,10 @@
     android:layout_height="match_parent"
     tools:context=".Main" >
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:text="@string/hello_world" />
+    <com.google.android.maps.MapView
+        android:id="@+id/myMapView"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"        
+        android:apiKey="@string/map_key" />
 
 </RelativeLayout>
