--- a/2ndEdition/laura.nunezgonzalez/Yncat/res/layout/activity_main.xml
+++ b/2ndEdition/laura.nunezgonzalez/Yncat/res/layout/activity_main.xml
@@ -5,6 +5,11 @@
     android:orientation="vertical"
     tools:context=".MainActivity" >
 
+    <LinearLayout
+        android:layout_width="wrap_content"
+    	android:layout_height="wrap_content"
+    	android:orientation="vertical"
+         >
 	<Button 
 	    android:id="@+id/btnmapa"
 	    android:layout_width="wrap_content"
@@ -17,5 +22,9 @@
 	    android:layout_height="wrap_content"
 	    android:text="@string/bfoto"/>
 		
-
+	  <ImageView 
+      android:layout_height="wrap_content" 
+      android:layout_width="wrap_content" 
+      android:id="@+id/imageView1" />
+</LinearLayout>
 </LinearLayout>
