--- a/2ndEdition/laura.nunezgonzalez/Yncat/res/layout/activity_main.xml
+++ b/2ndEdition/laura.nunezgonzalez/Yncat/res/layout/activity_main.xml
@@ -21,7 +21,13 @@
 	    android:layout_width="wrap_content"
 	    android:layout_height="wrap_content"
 	    android:text="@string/bfoto"/>
-		
+
+	<Button
+	    android:id="@+id/btnpreferences"
+	    android:layout_width="wrap_content"
+	    android:layout_height="wrap_content"
+	    android:text="@string/textbtnpref"/>
+			
 	  <ImageView 
       android:layout_height="wrap_content" 
       android:layout_width="wrap_content" 
