--- a/2ndEdition/laura.nunezgonzalez/Yncat/res/layout/activity_main.xml
+++ b/2ndEdition/laura.nunezgonzalez/Yncat/res/layout/activity_main.xml
@@ -8,19 +8,13 @@
     <LinearLayout
         android:layout_width="wrap_content"
     	android:layout_height="wrap_content"
-    	android:orientation="vertical"
+    	android:orientation="horizontal"
          >
 	<Button 
 	    android:id="@+id/btnmapa"
 	    android:layout_width="wrap_content"
 	    android:layout_height="wrap_content"
 	    android:text="@string/bmapa"/>
-	
-	<Button
-	    android:id="@+id/btnfoto"
-	    android:layout_width="wrap_content"
-	    android:layout_height="wrap_content"
-	    android:text="@string/bfoto"/>
 
 	<Button
 	    android:id="@+id/btnpreferences"
@@ -28,9 +22,25 @@
 	    android:layout_height="wrap_content"
 	    android:text="@string/textbtnpref"/>
 			
-	  <ImageView 
-      android:layout_height="wrap_content" 
-      android:layout_width="wrap_content" 
-      android:id="@+id/imageView1" />
 </LinearLayout>
+    <LinearLayout
+        android:layout_width="wrap_content"
+    	android:layout_height="wrap_content"
+    	android:orientation="horizontal"
+         >
+	<TextView 
+	            android:layout_width="wrap_content"
+    	android:layout_height="wrap_content"
+    	android:text="@string/search"/>
+	<EditText 
+	    android:id="@+id/edhashtag"
+	    android:layout_width="wrap_content"
+    	android:layout_height="wrap_content"
+	    />
+    <Button
+	    android:id="@+id/btnhashtag"
+	    android:layout_width="wrap_content"
+	    android:layout_height="wrap_content"
+	    android:text="@string/tbhashtag"/>
+	</LinearLayout>
 </LinearLayout>
