--- a/2ndEdition/laura.nunezgonzalez/Yncat/res/layout/activity_main.xml
+++ b/2ndEdition/laura.nunezgonzalez/Yncat/res/layout/activity_main.xml
@@ -26,15 +26,15 @@
     <LinearLayout
         android:layout_width="wrap_content"
     	android:layout_height="wrap_content"
-    	android:orientation="horizontal"
+    	android:orientation="vertical"
          >
 	<TextView 
-	            android:layout_width="wrap_content"
+	    android:layout_width="wrap_content"
     	android:layout_height="wrap_content"
     	android:text="@string/search"/>
 	<EditText 
 	    android:id="@+id/edhashtag"
-	    android:layout_width="wrap_content"
+	    android:layout_width="fill_parent"
     	android:layout_height="wrap_content"
 	    />
     <Button
